data/all_generated_tests/raw_wast_tests/block_StackCorruption_1935.wast
;; 6. **Test Description**: Create a test where a `block` is prematurely ended with an `end` instruction but without consuming the required stack operands specified as input by the `blocktype`.    - **Constraint Checked**: Validates enforcement of block scope and operand stack alignment upon block termination.    - **Relation to Stack Corruption**: Improper block termination and operand misalignment can leave the stack in a corrupted state, affecting following instructions.

(assert_invalid
  (module (func $premature-block-end
    (block (result i32) (end))
  ))
  "type mismatch"
)